[package]
name = "baseunits-rs"
version = "0.1.0"
description = "A library including domain models to deal with time and money."
authors = ["Junichi Kato <j5ik2o@gmail.com>"]
edition = "2018"
homepage = "https://github.com/j5ik2o/baseunits-rs"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.2"
rust_decimal = "1.35.0"
iso-4217 = "0.1"
num-bigint = "0.4.4"
rust-fp-categories = "0.0.5"
time = { version = "0.3.36" }
chrono = "0.4.38"
once_cell = "1.19.0"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "bench_main"
harness = false

